# process_logs

./: CMakeLists.txt  README.md  build.sh
src/: file1.json  file2.json  file3.json  log.txt  main.cpp
